--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "2.1.2",
     "redux": "^4.0.0",
     "redux-firestore": "^0.5.7",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^0.84.0"
   },
   "scripts": {
     "start": "react-scripts start",
