--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux": "^4.0.0",
     "redux-firestore": "^0.5.7",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-calendar": "0.0.8",
     "semantic-ui-react": "^0.84.0"
   },
   "scripts": {
