--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "firebase": "^5.3.0",
     "lodash": "^4.17.11",
     "materialize-css": "^1.0.0-rc.2",
-    "prop-types": "^15.6.2",
+    "prop-types": "^15.7.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-materialize": "^2.6.0",
@@ -16,6 +16,7 @@
     "react-redux-firebase": "^2.1.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
+    "react-semantic-ui-datepickers": "0.0.0-semantically-released",
     "redux": "^4.0.0",
     "redux-firestore": "^0.5.7",
     "redux-thunk": "^2.3.0",
